2008-05-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/details.c (details_update_thumbnail): fix bug that prevented
	  displaying thumbnails in the edit details window that were saved
	  on the iPod.

2008-05-31 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * context_menus.c
  
    Added coverart update call to eject ipod action.
    
  * display_coverart.c
  * display_covarart.h
  
    Tidied up function doc comments.
    Ensured when no playlist is selected, coverart_display_update 
    clears the artwork display.

2008-05-30  Christophe Fergeau  <teuf at gnome.org>

	* src/details.c:
	* src/display_coverart.c:
	* src/display_itdb.c:
	* src/display_photo.c:
	* src/file.c:
	* src/file_itunesdb.c:
	* src/misc_track.c: adjust to libgpod API changes (use
	itdb_track_has_thumbnail and itdb_track_get_thumbnail instead of using
	deprecated API and struct members)

2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/fetchcover.c

    Fix for incorrect creation of jpg filenames
    
2008-05-29 P.G. Richardson <phantom_sf at users.sourceforge.net>

  * src/display_photo.c

    Fix for pixbufs not being unreference in display_photo.c
    
2008-05-24 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/file.c (video_thumbnail_setup_cache): fixed compiler warning
	  and possible memory leak.

	* src/file.c (create_video_thumbnail): fixed possible memory leak.

2008-05-22 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/confirmation.c (gtkpod_confirmation): switch wrapping on for
	  displayed text.

2008-05-17 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/mp3file.c (mp3_read_gapless):
	  - added assertion for track->userdata
	  - remove gapless data if file does not contain gapless data.

	* src/file_convert.c: read gapless data after conversion to MP3
	  files.
	
2008-05-11 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/misc_playlist.c: don't allow adding of playlists if iPod is